--- a/App/Views/Review/reviews.html
+++ b/App/Views/Review/reviews.html
@@ -6,7 +6,7 @@
 		<div class="container box">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 restaurantHeader">
-					<h2>{{ name }} Reviews</h2>
+					<h2>{{ name | replace({'_' : ' '}) }} Reviews</h2>
 					<h4>Overall Rating {{overall}}</h4>
 					<ul class="star list-inline" data-id="{{overall}}">
 						<li class="empty"></li>
