--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -38,19 +38,74 @@
 				<div class="search">
 					<form action="/search" method="get" class="form-inline">
 						<div class="form-group">
-							<input type="text" name="location" class="form-control" placeholder="Enter your suburb or postcode" size="35">
+				<!-- 			<input type="text" name="location" class="form-control" placeholder="Enter your suburb or postcode" size="35"> -->
+
+							<div id="locationField">
+						      <input id="autocomplete" name="location" class="form-control" placeholder="Enter your suburb :)"
+						             onFocus="geolocate()" type="text" size="35"></input>
+						             <button class="btn btn-default" type="submit">
+								Let's Go
+							</button>
+						    </div>
+
 							<input type="hidden" name="cartType" value="delivery">
 							
 
-							<button class="btn btn-default" type="submit">
-								Let's Go
-							</button>
+							
 						</div>
 					</form>
+
+					
+
 				</div>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+		var placeSearch, autocomplete;
+      var componentForm = {
+        street_number: 'short_name',
+        route: 'long_name',
+        locality: 'long_name',
+        administrative_area_level_1: 'short_name',
+        country: 'long_name',
+        postal_code: 'short_name'
+      };
+
+      function initAutocomplete() {
+        // Create the autocomplete object, restricting the search to geographical
+        // location types.
+        var options = {
+        	types: ['(cities)'],
+        	componentRestrictions: {country: 'au'}
+        };
+        autocomplete = new google.maps.places.Autocomplete(
+            /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
+            options);
+
+        // When the user selects an address from the dropdown, populate the address
+        // fields in the form.
+        //autocomplete.addListener('place_changed', fillInAddress);
+      }
+      function geolocate() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var geolocation = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            var circle = new google.maps.Circle({
+              center: geolocation,
+              radius: position.coords.accuracy
+            });
+            autocomplete.setBounds(circle.getBounds());
+          });
+        }
+      }
+	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApVUyUl_aTo0Z2ONZkbbYqpg8MYjNjDpI&libraries=places&callback=initAutocomplete"
+        async defer></script>
+
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
