fix code style and comments

--- a/App/Views/Partner/panel.html
+++ b/App/Views/Partner/panel.html
@@ -61,6 +61,7 @@
 				</div>
 			</li>
 			<input type="submit" name="update" value="Update" class="btn">
+			<a href="/auth/users/forgot">Forgot password</a>
 		</ul>
 		</form>
 		</div>
