--- a/App/Views/Admin/admin.html
+++ b/App/Views/Admin/admin.html
@@ -7,11 +7,12 @@
 		<form class="form-inline" action="/auth/users/searchUser" method="GET">
 			<div class="form-group">
 				<input id="searchInput" class="form-control" type="text" name="search" placeholder="Search Users">
-				<input class="btn" type="submit" name="submit" value="Search">
+				<!-- <input class="btn" type="submit" name="submit" value="Search"> -->
+				<button class="btn" id="search">Search</button>
 			</div>
 
 		</form>
-		<button id="search">user</button>
+		
 		<hr>
 		<table class="table table-striped">
 			<thead>
@@ -75,8 +76,34 @@
 				</tr>
 			{% endfor %}
 			</tbody>
-
-		
 		</table>
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title">Cuisines list</h3>
+		  </div>
+
+		  <div class="panel-body">
+		  	<ul class="list-group">
+		  		{% for cuisines in cuisines%}
+				<li class="list-group-item">
+					<form class="form-inline" action="/restaurants/deleteCuisine" method="POST">
+					<span>{{cuisines.cuisineName}}</span>
+						<input type="hidden" name="cuisineId" value="{{cuisines.id}}">
+						<input class="btn btn-default" type="submit" name="deleteCuisine" value="delete">
+					</form>
+				</li>
+				{% endfor %}
+			</ul>
+			<form class="form-inline" action="/restaurants/addCuisines" method="POST">
+				<div class="form-group">
+					<label>
+						Add more cuisines name
+					</label>
+					<input class="form-control" type="text" name="cuisineName">
+					<input class="btn btn-default" type="submit" name="submitCuisine">
+				</div>
+			</form>
+		  </div>
+		</div>
 	</div>
 {% endblock %}
