--- a/App/Views/Lists/lists.html
+++ b/App/Views/Lists/lists.html
@@ -57,7 +57,7 @@
 				<table class="table table-bordered">
 					<tbody class="main">
 						{% if result is empty%}
-							<h2>Sorry! No any restaurants in this area</h2>
+							<h2>Sorry! No any restaurants in this area yet</h2>
 						{% else %}
 						{% for restaurant in result %}
 						<tr>
