--- a/App/Views/Partner/panel.html
+++ b/App/Views/Partner/panel.html
@@ -96,7 +96,15 @@
 					  			<label>Title</label>
 								<input class="form-control" type="text" name="title" value="{{ restaurant.title }}">
 								<label>cuisineName:</label>
-								<input class="form-control" type="text" name="cuisineName" value="{{ restaurant.cuisineName }}">
+								<select class="form-control" name="cuisineName" required>
+									{% for cuisines in cuisines %}
+										{% if cuisines.cuisineName == restaurant.cuisineName%}
+										<option value="{{cuisines.cuisineName}}" selected>{{cuisines.cuisineName}}</option>
+										{% else %}
+										<option value="{{cuisines.cuisineName}}">{{cuisines.cuisineName}}</option>
+										{% endif %}
+	  								{% endfor %}
+								</select>
 							</div>
 						</li>
 						<li>
