--- a/App/Views/Admin/admin.html
+++ b/App/Views/Admin/admin.html
@@ -4,15 +4,10 @@
 {% block body %}
 
 	<div class="container-fluid">
-		<form class="form-inline" action="/auth/users/searchUser" method="GET">
-			<div class="form-group">
-				<input id="searchInput" class="form-control" type="text" name="search" placeholder="Search Users">
-				<!-- <input class="btn" type="submit" name="submit" value="Search"> -->
-				<button class="btn" id="search">Search</button>
-			</div>
-
-		</form>
-		
+	<ul class="list-inline">
+		<li><input id="searchInput" class="form-control" type="text" name="search" placeholder="Search Users"></li>
+		<li><input type="submit" class="btn" id="search" value="Search"></li>
+	</ul>
 		<hr>
 		<table class="table table-striped">
 			<thead>
