--- a/App/Views/Admin/admin.html
+++ b/App/Views/Admin/admin.html
@@ -9,6 +9,7 @@
 		<li><input type="submit" class="btn" id="search" value="Search"></li>
 	</ul>
 		<hr>
+		<h4>Restaurant Owners</h4>
 		<table class="table table-striped">
 			<thead>
 				<tr>
@@ -49,6 +50,7 @@
 			</thead>
 			<tbody class="userTable">
 			{% for user in userData %}
+				{% if user.role == 2%}
 				<tr>
 					<td>{{user.id}}</td>
 					<td>{{user.userName}}</td>
@@ -69,6 +71,70 @@
 						</form>
 					</td>
 				</tr>
+				{% endif %}
+			{% endfor %}
+			</tbody>
+		</table>
+		<hr>
+		<h4>Customers</h4>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>
+						User Id
+					</th>
+					<th>
+						User name
+					</th>
+					<th>
+						User first name
+					</th>
+					<th>
+						User last name
+					</th>
+					<th>
+						User email
+					</th>
+					<th>
+						User address
+					</th>
+					<th>
+						User validation code
+					</th>
+					<th>
+						User activate
+					</th>
+					<th>
+						User role
+					</th>
+					<th>
+						Activate/Deactivate
+					</th>
+				</tr>
+			</thead>
+			<tbody class="userTable">
+			{% for user in userData %}
+				{% if user.role == 1%}
+				<tr>
+					<td>{{user.id}}</td>
+					<td>{{user.userName}}</td>
+					<td>{{user.firstName}}</td>
+					<td>{{user.lastName}}</td>
+					<td>{{user.email}}</td>
+					<td>{{user.address}}</td>
+					<td>{{user.validationCode}}</td>
+					<td>{{user.activate}}</td>
+					<td>{{user.role}}</td>
+					<td>
+						<form action="/admin/activateUser" method="POST">
+							<input type="hidden" name="email" value="{{user.email}}">
+							<input type="hidden" name="validationCode" value="{{user.validationCode}}">
+							<input class="btn btn-default" type="submit" name="activate" value="activate">
+							<input class="btn btn-danger" type="submit" name="deactivate" value="Deactivate">
+						</form>
+					</td>
+				</tr>
+				{% endif %}
 			{% endfor %}
 			</tbody>
 		</table>
